# AetherSDR

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QA-keyboard-shortcuts.md  QA-multipan-slice-301.md  README.md  RECENTER.md  SECURITY.md  STYLEGUIDE.md  THIRD_PARTY_LICENSES  commit_msg.txt  resources.qrc  setup-deepfilter.ps1  setup-deepfilter.sh  setup-fftw.ps1  setup-hidapi.ps1  setup-onnxruntime.ps1  setup-opus.ps1  test.ilk
.claude/: settings.json
.claude/commands/: triage.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/codeql/: codeql-config.yml
.github/docker/: Dockerfile
.github/workflows/: appimage.yml  build-macos-qt.yml  ci.yml  codeql.yml  docker-ci-image.yml  macos-dmg.yml  macos-installer.yml  release.yml  sanitizers.yml  sign-release.yml  streamdeck-plugins.yml  update-rnnoise.yml  windows-installer.yml
contrib/plugins/amp-stub/: AmpStubPlugin.cpp  AmpStubPlugin.h  CMakeLists.txt  ampstub.json
docs/: AetherClaude-Skills-Plan.md  MODEM.md  RELEASE-SIGNING-KEY.pub.asc  VERIFYING-RELEASES.md  architecture-pipelines.md  audio-pipeline.md  audio_test_plan.md  dialog-patterns.md  flex-meter-learnings.md  multi-pan-pitfalls.md  profile-import-export-manual-checklist.md  tci-discovery.md  tci-receivers.md  tx-audio-signal-path.md  vita49-format.md
hal-plugin/: AetherSDRDAX.cpp  CMakeLists.txt  Info.plist
packaging/linux/: 60-hid-encoders.rules
packaging/macos/: Info.plist.in  build-installer.sh  uninstall.sh
packaging/windows/: installer.iss  stage-msvc-runtime.ps1
patches/: 0001-cleanup-m_audioPlc-on-stream-removal.patch
plugins/elgato-aethersdr/: README.md  com.aethersdr.radio.streamDeckPlugin
plugins/quickkeys-aethersdr/: config.json  install.sh  quickkeys-aethersdr.service  quickkeys_aethersdr.py
plugins/streamcontroller-aethersdr/: gen_icons.py  main.py  manifest.json  tci_client.py
resources/bandplans/: arrl-us.json  iaru-region1.json  iaru-region2.json  iaru-region3.json  rac-canada.json
resources/help/: aethersdr-help.md  configuring-aethersdr-controls.md  contributing-to-aethersdr.md  getting-started.md  understanding-data-modes.md  understanding-noise-cancellation.md
resources/shaders/: overlay.frag  overlay.frag.qsb  overlay.vert  overlay.vert.qsb  spectrum.frag  spectrum.frag.qsb  spectrum.vert  spectrum.vert.qsb  texturedquad.frag  waterfall.frag  waterfall.frag.qsb  waterfall.vert  waterfall.vert.qsb
scripts/: cpu-monitor.sh  gen_whatsnew.py  render-profile.sh
sdrbase/dsp/: PanadapterStream.cpp  PanadapterStream.h
src/: PanadapterStream.cpp  PanadapterStream.h  main.cpp
src/core/: AdifParser.cpp  AdifParser.h  AppSettings.cpp  AppSettings.h  AsyncLogWriter.cpp  AsyncLogWriter.h  AudioEngine.cpp  AudioEngine.h  BandStackSettings.cpp  BandStackSettings.h  CabExtractor.cpp  CabExtractor.h  ChannelStripPresets.cpp  ChannelStripPresets.h  ClientComp.cpp  ClientComp.h  ClientDeEss.cpp  ClientDeEss.h  ClientEq.cpp  ClientEq.h  ClientFinalLimiter.cpp  ClientFinalLimiter.h  ClientGate.cpp  ClientGate.h  ClientPudu.cpp  ClientPudu.h  ClientPuduMonitor.cpp  ClientPuduMonitor.h  ClientQuindarTone.cpp  ClientQuindarTone.h  ClientReverb.cpp  ClientReverb.h  ClientTube.cpp  ClientTube.h  ClientTxTestTone.cpp  ClientTxTestTone.h  CtyDatParser.cpp  CtyDatParser.h  CwDecoder.cpp  CwDecoder.h  (+163 more)
src/gui/: AetherDspDialog.cpp  AetherDspDialog.h  AetherDspWidget.cpp  AetherDspWidget.h  AetherialAudioStrip.cpp  AetherialAudioStrip.h  AmpApplet.cpp  AmpApplet.h  AntennaGeniusApplet.cpp  AntennaGeniusApplet.h  AppletPanel.cpp  AppletPanel.h  AtuPreTuneDialog.cpp  AtuPreTuneDialog.h  AudioDeviceChangeDialog.cpp  AudioDeviceChangeDialog.h  Ax25HfPacketDecodeDialog.cpp  Ax25HfPacketDecodeDialog.h  BandStackPanel.cpp  BandStackPanel.h  CatApplet.cpp  CatApplet.h  CatControlApplet.cpp  CatControlApplet.h  ClientChainApplet.cpp  ClientChainApplet.h  ClientChainWidget.cpp  ClientChainWidget.h  ClientCompApplet.cpp  ClientCompApplet.h  ClientCompCurveWidget.cpp  ClientCompCurveWidget.h  ClientCompEditor.cpp  ClientCompEditor.h  ClientCompEditorCanvas.cpp  ClientCompEditorCanvas.h  ClientCompKnob.cpp  ClientCompKnob.h  ClientCompLimiterButton.cpp  ClientCompLimiterButton.h  (+226 more)
src/models/: AntennaGeniusModel.cpp  AntennaGeniusModel.h  BandDefs.h  BandPlan.h  BandPlanManager.cpp  BandPlanManager.h  BandSettings.cpp  BandSettings.h  CwxModel.cpp  CwxModel.h  DaxIqModel.cpp  EqualizerModel.cpp  EqualizerModel.h  FlexWaveformModel.cpp  FlexWaveformModel.h  LdgTunerModel.cpp  LdgTunerModel.h  MemoryEntry.h  MeterModel.cpp  MeterModel.h  ModelCapabilities.cpp  ModelCapabilities.h  NavtexModel.cpp  NavtexModel.h  PanadapterModel.cpp  PanadapterModel.h  RadioModel.cpp  RadioModel.h  RadioStatusOwnership.h  SliceModel.cpp  SliceModel.h  SpotModel.cpp  SpotModel.h  TnfModel.cpp  TnfModel.h  TransmitModel.cpp  TransmitModel.h  TunerModel.cpp  TunerModel.h  (+2 more)
tests/: async_log_writer_test.cpp  ax25_frame_formatter_test.cpp  ax25_libmodem_shim_test.cpp  client_comp_test.cpp  client_deess_test.cpp  client_eq_smoothing_test.cpp  client_eq_test.cpp  client_gate_test.cpp  client_pudu_test.cpp  client_quindar_test.cpp  client_reverb_test.cpp  client_tube_test.cpp  container_manager_test.cpp  container_nesting_test.cpp  container_widget_test.cpp  cw_sidetone_test.cpp  cwx_model_queue_test.cpp  cwx_panel_test.cpp  dax_tx_policy_test.cpp  flex_waveform_model_test.cpp  help_dialog_test.cpp  iambic_keyer_test.cpp  memory_recall_policy_test.cpp  meter_model_test.cpp  midi_settings_test.cpp  model_capabilities_test.cpp  mqtt_antenna_alias_test.cpp  navtex_model_test.cpp  ole_compound_file_test.cpp  packet_loss_concealment_test.cpp  panadapter_model_rx_antenna_test.cpp  passive_spots_policy_test.cpp  perf_telemetry_test.cpp  profile_transfer_test.cpp  radio_status_ownership_test.cpp  shortcut_manager_test.cpp  slice_label_test.cpp  slice_model_letter_test.cpp  spot_mode_resolver_test.cpp  transmit_model_apd_test.cpp  (+3 more)
tools/: train_classifier.py
(+64 files in other folders)
